--- a/release/app/package.json
+++ b/release/app/package.json
@@ -1,12 +1,11 @@
 {
-  "name": "electron-react-boilerplate",
-  "version": "4.6.0",
-  "description": "A foundation for scalable desktop apps",
+  "name": "pixelshrink",
+  "version": "1.0.0",
+  "description": "A modern image compression app",
   "license": "MIT",
   "author": {
-    "name": "Electron React Boilerplate Maintainers",
-    "email": "electronreactboilerplate@gmail.com",
-    "url": "https://github.com/electron-react-boilerplate"
+    "name": "PixelShrink",
+    "email": "contact@pixelshrink.app"
   },
   "main": "./dist/main/main.js",
   "scripts": {
@@ -14,5 +13,7 @@
     "postinstall": "npm run rebuild && npm run link-modules",
     "link-modules": "node -r ts-node/register ../../.erb/scripts/link-modules.ts"
   },
-  "dependencies": {}
+  "dependencies": {
+    "sharp": "^0.33.2"
+  }
 }
